--- a/src/main/webapp/static/css/aboutme.css
+++ b/src/main/webapp/static/css/aboutme.css
@@ -1,27 +1,4 @@
-.con_content{
-    overflow: hidden;
-    width: 68vw;
-    margin:auto;
-    background: rgba(255,255,255,.6);
-    border:#ccc 1px solid;
-}
-.con_content .about_box{
-    padding:20px;
-    overflow: hidden;
-}
-.nh1{
-    line-height: 31px;
-    height: 31px;
-    font-size: 14px;
-    border-bottom: #333 2px solid;
-    color:#171717;
-}
-.nh1 span{
-    float: right;
-    font-size:12px;
-    color: #666;
-    font-weight: normal;
-}
+
 .a_title{
     text-align: center;
     font-size:24px;
@@ -51,7 +28,9 @@
     left:158px;
     margin-left: -10px;
 }
-
+.cbp_tmtimeline > li{
+    position: relative;
+}
 .cbp_tmtimeline li .cbp_tmtime{
     transition: all 1s;
 }
@@ -119,6 +98,13 @@
     font-size: 16px;
     text-shadow: rgba(7, 84, 152, 0.71) 1px 1px 1px;
 }
+/*.cbp_tmtimeline > li .cbp_tmlabel p{*/
+    /*min-height:60px;*/
+    /*height:60px;*/
+    /*!*white-space: nowrap;*!*/
+    /*overflow: hidden;*/
+    /*text-overflow: ellipsis;*/
+/*}*/
 .cbp_tmtimeline > li .cbp_tmlabel:after {
     right: 100%;
     border: solid transparent;
